welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:6: error: ';' expected but 'if' found.
  } if (estFaceMur==true & estSurBiscuit()==false) {droite()
    ^