welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
retourne()
while (estFaceMur==false) {
while (estSurBiscuit()==false & estFaceMur==false) {
	avance()

  } if (estFaceMur==true & estSurBiscuit()==false) {droite()
avance()
gauche()
avance()
stop()}

retourne()
prendBiscuit()

while (estSurBiscuit()==false & estFaceMur==false) {
	avance()
	

  }
recule()
poseBiscuit()
retourne()
avance()
} 



  


